# personalmail-rl-opt

./: README.md  blog_post.md  colab_nb  eval_v5.json
personalmail-rl-opt/: .gitignore  Dockerfile  README.md  README_HF.md  app.py  blog_post.md  openenv.yaml  pyproject.toml  requirements.txt  requirements_training.txt  server.py
personalmail-rl-opt/env/: __init__.py  environment.py  models.py  rewards.py  scenarios.py
personalmail-rl-opt/server/: app.py
personalmail-rl-opt/training/: PersonalMailRL_Colab.ipynb  evaluate_before_after.py  generate_notebook.py  train_grpo.py
personalmail-rl-opt/ui/: index.html
