[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalmail-rl"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for personal email handling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "PersonalMail-RL Team" }
]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "python-multipart==0.0.9",
  "httpx==0.27.2",
  "gradio==4.44.0",
  "openai>=1.30.0",
  "openenv>=0.1.0",
]

[project.scripts]
server = "server.app:main"
personalmail-rl-server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
